Fix playicon visibility bug for historyitems